--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,15 @@
 .build
 .swiftpm
 Package.resolved
+
+# Xcode
+*.xcodeproj/
+*~.nib
+*.pbxuser
+*.perspective
+*.mode1v3
+*.mode2v3
+*.perspectivev3
+*.xcuserstate
+project.xcworkspace/
+xcuserdata/
